# cura-mcp-server

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
agent/: cura-slicing-assistant.md
cura-plugin/: CuraMcpPlugin.py  README.md  __init__.py  errors.py  plugin.json  pytest.ini
cura-plugin/adapters/: __init__.py  cura_api.py
examples/: claude-desktop-config.json  codex-config.toml
mcp-server/: README.md  pyproject.toml
mcp-server/src/cura_mcp/: __init__.py  client.py  config.py  errors.py  models.py  server.py
mcp-server/src/cura_mcp/tools/: __init__.py  arrange_all.py  center_model.py  clear_plate.py  duplicate_model.py  estimates.py  export_gcode.py  export_model.py  get_all_user_settings.py  get_machine_info.py  get_model_settings.py  get_quality.py  get_setting.py  get_snapshot.py  group_models.py  list_machines.py  list_materials.py  list_models.py  list_quality_profiles.py  list_variants.py  load_model.py  merge_models.py  mirror_model.py  move_model.py  open_project.py  orientation.py  remove_model.py  reset_all_settings.py  reset_model_setting.py  reset_setting.py  rotate.py  save_project.py  scale_model.py  scale_to_fit.py  select_model.py  set_adhesion.py  set_infill_density.py  set_layer_height.py  set_mesh_type.py  set_model_setting.py  (+9 more)
mcp-server/tests/: test_bridge.py  test_package_plugin.py
scripts/: package_plugin.py  smoke.sh
(+33 files in other folders)
