[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cura-mcp"
version = "0.1.0"
description = "Local MCP server that drives the UltiMaker Cura slicer. No hub, no telemetry."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "padymies", email = "padymies@gmail.com" }]
keywords = ["mcp", "cura", "3d-printing", "slicer", "model-context-protocol"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
cura-mcp = "cura_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cura_mcp"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
